feat: add fake cars to the bank